Polybar mode identifier

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -31,15 +31,14 @@ module-margin = 1
 font-0 = "JetBrainsMono Nerd Font:size=16;4"
 
 modules-left = i3
-#modules-center = date
 modules-right = wlan pulseaudio bluetooth backlight cpu memory temp battery powermeter date
-
-tray-position = center
-tray-padding = 1
 
 [module/i3]
 type = internal/i3
-format = <label-state>
+format = <label-mode> <label-state>
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = #e60053
 index-sort = true
 label-focused = %name%
 label-focused-background = ${colors.blue}
