--- a/config/i3/config
+++ b/config/i3/config
@@ -34,11 +34,11 @@ default_border pixel 0
 default_floating_border pixel 0
 
 # Workspaces
-set $ws1 "1: "
-set $ws2 "2: "
-set $ws3 "3: "
-set $ws4 "4: "
-set $ws5 "5: "
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
 
 # Keybinds
 bindsym $mod+Return exec $term
@@ -76,3 +76,17 @@ bindsym $mod+Shift+2 move container to workspace number 2
 bindsym $mod+Shift+3 move container to workspace number 3
 bindsym $mod+Shift+4 move container to workspace number 4
 bindsym $mod+Shift+5 move container to workspace number 5
+
+# Resize
+bindsym $mod+r mode "resize"
+
+mode "resize" {
+    bindsym h resize shrink width 50px
+    bindsym j resize grow height 50px
+    bindsym k resize shrink height 50px
+    bindsym l resize grow width 50px
+
+    # Return to default mode
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
