Removed powermeter for now; Polybar now shows music info

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -29,9 +29,10 @@ padding-right = 2
 module-margin = 1
 
 font-0 = "JetBrainsMono Nerd Font:size=16;4"
+font-1 = "JetBrainsMono:size=10;3"
 
 modules-left = i3
-modules-right = wlan pulseaudio bluetooth backlight cpu memory temp battery powermeter date
+modules-right = music-info wlan pulseaudio bluetooth backlight cpu memory temp battery date
 
 [module/i3]
 type = internal/i3
@@ -135,7 +136,7 @@ label-warn-foreground = #f00
 
 [module/powermeter]
 type = custom/script
-exec = awk '{ printf " %.1fW\n", $1/1000000 }' /sys/class/power_supply/BAT0/power_now
+exec = awk '{ printf "[%.1fW]\n", $1/1000000 }' /sys/class/power_supply/BAT0/power_now
 interval = 3
 label = %output%
 label-foreground = #fba922
@@ -145,3 +146,15 @@ type = custom/script
 exec = ~/.local/bin/polybar-bluetooth.sh --status
 interval = 2
 click-left = ~/.local/bin/polybar-bluetooth.sh
+
+[module/music-info]
+type = custom/script
+exec = ~/.config/polybar/scripts/audio_scroll.sh
+interval = 1
+label-alignment = center
+label-font = 2
+label-maxlen = 50
+label-ellipsis = true
+format-background = #2b2b2b
+format-padding = 1
+click-left = playerctl play-pause
