Removed click events; Added maxlen for elements

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -116,12 +116,11 @@ format-connected = <label-connected>
 format-connected-prefix = "󰖩 "
 format-connected-prefix-foreground = ${colors.aqua}
 label-connected = %essid%
-click-left = ~/.local/bin/polybar-wlan.sh
+label-connected-maxlen = 25
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = "󰖪 "
 format-disconnected-prefix-foreground = ${colors.red}
 label-disconnected = off
-click-right = ~/.local/bin/polybar-wlan.sh
 
 [module/temp]
 type = internal/temperature
@@ -144,8 +143,8 @@ label-foreground = #fba922
 [module/bluetooth]
 type = custom/script
 exec = ~/.local/bin/polybar-bluetooth.sh --status
+label-maxlen = 30
 interval = 2
-click-left = ~/.local/bin/polybar-bluetooth.sh
 
 [module/music-info]
 type = custom/script
@@ -157,4 +156,3 @@ label-maxlen = 50
 label-ellipsis = true
 format-background = #2b2b2b
 format-padding = 1
-click-left = playerctl play-pause
