--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,22 +1,20 @@
-backend = "xrender"
+backend = "glx"
 glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+use-damage = true;
 vsync = true;
-use-damage = false;
 
-# Runde Ecken
-corner-radius = 10;
+corner-radius = 0;
+
+shadow = false;
+fading = false;
+blur-method = "none";
+
 rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
+    "window_type = 'dock'",
+    "window_type = 'desktop'"
 ];
 
-# Schatten (optional für mehr Tiefe)
-shadow = true;
-shadow-radius = 12;
-shadow-offset-x = -12;
-shadow-offset-y = -12;
-shadow-opacity = 0.5;
-
-# Transparenz
 inactive-opacity = 0.95;
 frame-opacity = 1.0;
+inactive-opacity-override = false;
