--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -10,15 +10,12 @@ gray    = #a89984
 fg      = #ebdbb2
 
 [bar/main]
-width = 1910
 height = 40
-offset-x = 5
-offset-y = 5
-radius = 10
+radius = 0
 fixed-center = true
-border-size = 5
-border-top-size = 5
-override-redirect = true
+border-size = 0
+border-top-size = 0
+override-redirect = false
 wm-restack = i3
 
 background = ${colors.bg}
@@ -29,10 +26,10 @@ padding-right = 2
 module-margin = 1
 
 font-0 = "JetBrainsMono Nerd Font:size=16;4"
-font-1 = "JetBrainsMono:size=10;3"
+font-1 = "JetBrainsMono:size=12;3"
 
 modules-left = i3
-modules-right = music-info wlan pulseaudio bluetooth backlight cpu memory temp battery date
+modules-right = music-info wlan pulseaudio bluetooth backlight cpu memory temp battery powermeter date
 
 [module/i3]
 type = internal/i3
@@ -54,14 +51,14 @@ label-urgent-padding = 2
 
 [module/cpu]
 type = internal/cpu
-interval = 2
+interval = 3
 format-prefix = " "
 format-prefix-foreground = ${colors.aqua}
 label = %percentage%%
 
 [module/memory]
 type = internal/memory
-interval = 2
+interval = 3
 format-prefix = " "
 format-prefix-foreground = ${colors.purple}
 label = %percentage_used%%
@@ -89,7 +86,6 @@ label-foreground = ${colors.fg}
 type = internal/pulseaudio
 use-ui-max = false
 max-volume = 100
-interval = 5
 format-volume = <label-volume>
 label-volume = %{F#458588}󰕾%{F-} %percentage%%
 label-muted = 󰝟 muted
@@ -98,9 +94,7 @@ label-muted-foreground = ${colors.gray}
 [module/backlight]
 type = internal/backlight
 card = amdgpu_bl0
-use-actual-light = true
-poll-interval = 0
-enable-scroll = true
+use-actual-brightness = false
 format = <label>
 format-prefix = "󰃠 "
 format-prefix-foreground = ${colors.yellow}
@@ -152,7 +146,7 @@ exec = ~/.config/polybar/scripts/audio_scroll.sh
 interval = 1
 label-alignment = center
 label-font = 2
-label-maxlen = 50
+label-maxlen = 35
 label-ellipsis = true
 format-background = #2b2b2b
 format-padding = 1
