Removed powermeter from polybar (module is still in the config); Adjusted colors for rofi

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -29,7 +29,7 @@ font-0 = "JetBrainsMono Nerd Font:size=16;4"
 font-1 = "JetBrainsMono:size=12;3"
 
 modules-left = i3
-modules-right = music-info wlan pulseaudio bluetooth backlight cpu memory temp battery powermeter date
+modules-right = music-info wlan pulseaudio bluetooth backlight cpu memory temp battery date
 
 [module/i3]
 type = internal/i3
