--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -29,7 +29,7 @@ font-0 = "JetBrainsMono Nerd Font:size=16;4"
 font-1 = "JetBrainsMono:size=12;3"
 
 modules-left = i3
-modules-right = music-info wlan pulseaudio bluetooth backlight cpu memory temp battery date
+modules-right = music-info wlan bluetooth pulseaudio backlight cpu memory temp battery date
 
 [module/i3]
 type = internal/i3
@@ -70,10 +70,8 @@ battery = BAT0
 adapter = AC
 format-charging = <label-charging>
 format-discharging = <label-discharging>
-label-charging = 󰂄 %percentage%%
-label-charging-foreground = ${colors.green}
-label-discharging = 󰁹 %percentage%%
-label-discharging-foreground = ${colors.yellow}
+label-charging = %{F##98971a}󰂄%{F-} %percentage%%
+label-discharging = %{F#d79921}󰁹%{F-} %percentage%%
 
 [module/date]
 type = internal/date
