Removed muted text in polybar; Height of urlinput bar in firefox corrected

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -86,7 +86,7 @@ use-ui-max = false
 max-volume = 100
 format-volume = <label-volume>
 label-volume = %{F#458588}󰕾%{F-} %percentage%%
-label-muted = 󰝟 muted
+label-muted = 󰝟
 label-muted-foreground = ${colors.gray}
 
 [module/backlight]
